table to accordion, fix collapse parent, new classes

--- a/nws/style.css
+++ b/nws/style.css
@@ -3,7 +3,17 @@ th, td {
     font-size: 16pt;
 }
 
+div {
+    border: 1px solid black
+}
+
 .data {
     text-align: center;
     width: 10%;
+}
+
+.accordion-row {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
 }
